--- a/index.html
+++ b/index.html
@@ -16,100 +16,100 @@
 <body>
     <div class=" container ">
         <div class="row no-gutters">
-            <div class="col-1" id="grey"></div>
-            <div class="col-1 offset-9" id="grey"></div>
+            <div class="col-1 grey"></div>
+            <div class="col-1 offset-9 grey"></div>
         </div>
         <div class="row no-gutters">
-            <div class="col-1" id="grey"></div>
-            <div class="col-1 offset-3" id="orange"></div>
-            <div class="col-1" id="yellow"></div>
-            <div class="col-1" id="orange"></div>
-            <div class="col-1 offset-3" id="grey"></div>
+            <div class="col-1 grey"></div>
+            <div class="col-1 offset-3 orange"></div>
+            <div class="col-1 yellow"></div>
+            <div class="col-1 orange"></div>
+            <div class="col-1 offset-3 grey"></div>
         </div>
         <div class="row no-gutters">
-            <div class="col-1" id="grey"></div>
-            <div class="col-1" id="grey"></div>
-            <div class="col-1 offset-1" id="orange"></div>
-            <div class="col-1" id="yellow"></div>
-            <div class="col-1" id="black"></div>
-            <div class="col-1" id="yellow"></div>
-            <div class="col-1" id="orange"></div>
-            <div class="col-1  offset-1" id="grey"></div>
-            <div class="col-1" id="grey"></div>
+            <div class="col-1 grey"></div>
+            <div class="col-1 grey"></div>
+            <div class="col-1 offset-1 orange"></div>
+            <div class="col-1 yellow"></div>
+            <div class="col-1 black"></div>
+            <div class="col-1 yellow"></div>
+            <div class="col-1 orange"></div>
+            <div class="col-1  offset-1 grey"></div>
+            <div class="col-1 grey"></div>
 
         </div>
         <div class="row no-gutters">
-            <div class="col-1" id="grey"></div>
-            <div class="col-1" id="grey"></div>
-            <div class="col-1" id="orange"></div>
-            <div class="col-1" id="orange"></div>
-            <div class="col-1" id="yellow"></div>
-            <div class="col-1" id="black"></div>
-            <div class="col-1" id="yellow"></div>
-            <div class="col-1" id="orange"></div>
-            <div class="col-1" id="orange"></div>
-            <div class="col-1" id="grey"></div>
-            <div class="col-1" id="grey"></div>
+            <div class="col-1 grey"></div>
+            <div class="col-1 grey"></div>
+            <div class="col-1 orange"></div>
+            <div class="col-1 orange"></div>
+            <div class="col-1 yellow"></div>
+            <div class="col-1 black"></div>
+            <div class="col-1 yellow"></div>
+            <div class="col-1 orange"></div>
+            <div class="col-1 orange"></div>
+            <div class="col-1 grey"></div>
+            <div class="col-1 grey"></div>
 
         </div>
         <div class="row no-gutters">
 
-            <div class="col-1" id="grey"></div>
-            <div class="col-1" id="grey"></div>
-            <div class="col-1 offset-1" id="orange"></div>
-            <div class="col-1" id="yellow"></div>
-            <div class="col-1" id="black"></div>
-            <div class="col-1" id="yellow"></div>
-            <div class="col-1" id="orange"></div>
-            <div class="col-1  offset-1" id="grey"></div>
-            <div class="col-1" id="grey"></div>
+            <div class="col-1 grey"></div>
+            <div class="col-1 grey"></div>
+            <div class="col-1 offset-1 orange"></div>
+            <div class="col-1 yellow"></div>
+            <div class="col-1 black"></div>
+            <div class="col-1 yellow"></div>
+            <div class="col-1 orange"></div>
+            <div class="col-1  offset-1 grey"></div>
+            <div class="col-1 grey"></div>
 
         </div>
         <div class="row no-gutters">
-            <div class="col-1" id="grey"></div>
-            <div class="col-1" id="grey"></div>
-            <div class="col-1" id="grey"></div>
-            <div class="col-1 offset-1" id="orange"></div>
-            <div class="col-1" id="yellow"></div>
-            <div class="col-1" id="orange"></div>
-            <div class="col-1  offset-1" id="grey"></div>
-            <div class="col-1" id="grey"></div>
-            <div class="col-1" id="grey"></div>
+            <div class="col-1 grey"></div>
+            <div class="col-1 grey"></div>
+            <div class="col-1 grey"></div>
+            <div class="col-1 offset-1 orange"></div>
+            <div class="col-1 yellow"></div>
+            <div class="col-1 orange"></div>
+            <div class="col-1  offset-1 grey"></div>
+            <div class="col-1 grey"></div>
+            <div class="col-1 grey"></div>
         </div>
         <div class="row no-gutters">
-            <div class="col-1 offset-1" id="grey"></div>
-            <div class="col-1" id="grey"></div>
-            <div class="col-1" id="grey"></div>
-            <div class="col-1  offset-3" id="grey"></div>
-            <div class="col-1" id="grey"></div>
-            <div class="col-1" id="grey"></div>
+            <div class="col-1 offset-1 grey"></div>
+            <div class="col-1 grey"></div>
+            <div class="col-1 grey"></div>
+            <div class="col-1  offset-3 grey"></div>
+            <div class="col-1 grey"></div>
+            <div class="col-1 grey"></div>
 
         </div>
         <div class="row no-gutters">
-            <div class="col-1 offset-2" id="grey"></div>
-            <div class="col-1" id="grey"></div>
-            <div class="col-1" id="grey"></div>
-            <div class="col-1" id="grey"></div>
-            <div class="col-1" id="grey"></div>
-            <div class="col-1" id="grey"></div>
-            <div class="col-1" id="grey"></div>
+            <div class="col-1 offset-2"></div>
+            <div class="col-1 grey"></div>
+            <div class="col-1 grey"></div>
+            <div class="col-1 grey"></div>
+            <div class="col-1 grey"></div>
+            <div class="col-1 grey"></div>
+            <div class="col-1 grey"></div>
         </div>
         <div class="row no-gutters">
-            <div class="col-1 offset-3" id="grey"></div>
-            <div class="col-1" id="grey"></div>
-            <div class="col-1" id="grey"></div>
-            <div class="col-1" id="grey"></div>
-            <div class="col-1" id="grey"></div>
+            <div class="col-1 offset-3"></div>
+            <div class="col-1 grey"></div>
+            <div class="col-1 grey"></div>
+            <div class="col-1 grey"></div>
+            <div class="col-1 grey"></div>
         </div>
         <div class="row no-gutters">
-            <div class="col-1 offset-4" id="grey"></div>
-            <div class="col-1" id="grey"></div>
-            <div class="col-1" id="grey"></div>
+            <div class="col-1 offset-4 grey"></div>
+            <div class="col-1 grey"></div>
+            <div class="col-1 grey"></div>
         </div>
         <div class="row no-gutters">
-            <div class="col-1 offset-4" id="grey"></div>
-            <div class="col-1" id="grey"></div>
-            <div class="col-1" id="grey"></div>
+            <div class="col-1 offset-4"></div>
+            <div class="col-1 grey"></div>
+            <div class="col-1 grey"></div>
         </div>
 
 
